--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="product-item item-1">
             <div class="image-box">
-                <a href="LINK_1"><img src="https://sf-static.upanhlaylink.com/img/image_2026010378eadcb3e8123dc3ff7c432670ca52c9.jpg"></a>
+                <a href="https://lh10lm-arch.github.io/spquabuoi/"><img src="https://sf-static.upanhlaylink.com/img/image_2026010378eadcb3e8123dc3ff7c432670ca52c9.jpg"></a>
             </div>
             <div class="product-info">
                 <span class="product-name">Quả bưởi</span>
@@ -96,7 +96,7 @@
 
         <div class="product-item item-2">
             <div class="image-box">
-                <a href="LINK_2"><img src="https://sf-static.upanhlaylink.com/img/image_202601030b57cd4844bccb3367c5390e14596daa.jpg"></a>
+                <a href="https://lh10lm-arch.github.io/spngo/"><img src="https://sf-static.upanhlaylink.com/img/image_202601030b57cd4844bccb3367c5390e14596daa.jpg"></a>
             </div>
             <div class="product-info">
                 <span class="product-name">Quả ngô</span>
@@ -106,7 +106,7 @@
 
         <div class="product-item item-3">
             <div class="image-box">
-                <a href="LINK_3"><img src="https://sf-static.upanhlaylink.com/img/image_202601030bdddcd1ad1484bf419d860dd0e42fce.jpg"></a>
+                <a href="https://lh10lm-arch.github.io/spsuplo/"><img src="https://sf-static.upanhlaylink.com/img/image_202601030bdddcd1ad1484bf419d860dd0e42fce.jpg"></a>
             </div>
             <div class="product-info">
                 <span class="product-name">Súp lơ</span>
@@ -116,7 +116,7 @@
 
         <div class="product-item item-4">
             <div class="image-box">
-                <a href="LINK_4"><img src="https://sf-static.upanhlaylink.com/img/image_202601032b55a3382a2e68cd5cb13273911a0f49.jpg"></a>
+                <a href="https://lh10lm-arch.github.io/spraucan/"><img src="https://sf-static.upanhlaylink.com/img/image_202601032b55a3382a2e68cd5cb13273911a0f49.jpg"></a>
             </div>
             <div class="product-info">
                 <span class="product-name">Rau cần</span>
